--- a/angular-2-getting-started/package.json
+++ b/angular-2-getting-started/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
+    "lite-server": "^2.2.0",
     "tslint": "^3.7.4",
+    "typescript": "^2.0.2",
     "typings": "^1.0.4"
   },
   "repository": {}
